# playground_xpt2046

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  adcPoll.cpp  adcPoll.h  adcTest.cpp  batterySensor.cpp  batterySensor.h  batteryTester2.ino  heap.cpp  hwSettings.h  joy_test.cpp  mainCode.cpp  myPinout.h  platformConfig.cmake  stopWatch.cpp  touchScreen.cpp  touchScreen.h
Arduino_STM32/STM32F1/cores/maple/libmaple/: i2c.c  i2c_f1.c
Arduino_STM32/STM32F1/libraries/SPI/src/: SPI.cpp  SPI.h
Arduino_STM32/STM32F1/system/libmaple/: dma_private.h
FreeRTOS/: CMakeLists.txt
FreeRTOS/Source/portable/Stm32duino/: port.c
RotaryEncoder/: .gitmodules  CMakeLists.txt  wav_irotary.cpp
TFT_eSPI/: CMakeLists.txt  TFT_eSPI_Custom.h  User_Setup.h
TFT_eSPI/tft/: README.md  TFT_eSPI.cpp  TFT_eSPI.h  TFT_eSPI_draw.cpp  TFT_eSPI_font.cpp
TFT_eSPI/tft/Extensions/: Sprite.cpp
UI_engine/: CMakeLists.txt  UI_screen.cpp  UI_screen.h  UI_widget.cpp  UI_widget.h  UI_widget_button.cpp  UI_widget_button.h  UI_widget_numbers.cpp  UI_widget_numbers.h
assets/fontCompressor/: CMakeLists.txt  fontCompressor.cpp
attic/TFT_eSPI/: TFT_eSPI_extended.h  User_Setup.h
cmake/: ArduinoToolchainStm32.cmake
cmake/Platform/Core/BoardFlags/: LinkerFlagsSetterStm32.cmake
cmake/Platform/Core/Targets/: ArduinoFirmwareTargetCreatorStm32.cmake
cmake/Platform/Initialization/: DefaultCFlagsStm32.cmake  DetectVersion.cmake
commonCode/: dso_eeprom.cpp
lowFlashConsumption/: usb_stubs.c
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
patches/: spi_dma_async_patch2.diff  weak_i2c.diff
utils/: i2c_stubs.c
